fix bug with soft line wrap

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ pre[class*="language-"].line-numbers {
 	position: relative;
 	padding-left: 3.8em;
 	counter-reset: linenumber;
+	white-space: pre-wrap;
 }
 
 pre[class*="language-"].line-numbers > code {
